--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-gradio
+gradio==4.44.1
+huggingface-hub==0.24.0
 yt-dlp
 openai-whisper
-torch
+torch --index-url https://download.pytorch.org/whl/cpu
