--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ gradio==4.44.1
 huggingface-hub==0.24.0
 yt-dlp
 openai-whisper
-torch --index-url https://download.pytorch.org/whl/cpu
+numpy<2.0
+faster-whisper
